fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 
   color: rgba(255, 255, 255, 0.87);
   background-color: black;
+  overflow-x: hidden;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
